Updated page Basic Sketcher Tutorial/pl

--- a/wiki/pl/Basic_Sketcher_Tutorial.html
+++ b/wiki/pl/Basic_Sketcher_Tutorial.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Basic Sketcher Tutorial/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Basic+Sketcher+Tutorial&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Grundlegendes Tutorial zum Sketcher (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Grundlegendes Tutorial zum Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Basic_Sketcher_Tutorial.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Basic Sketcher Tutorial (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial B&aacute;sico Croquizador (70% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Tutoriel d'introduction (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial base di Sketcher (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial do esbo&ccedil;o (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial B&aacute;sico de Sketcher (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial Sketcher (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -182,12 +182,8 @@ Tutaj mog&#261; zosta&#263; zmienione r&oacute;wnie&#380; inne opcje, w tym g&#2
 <dl><dd>7.6. Zaznacz lini&#281; konstrukcyjn&#261;, kt&oacute;rej pozycja jest najbli&#380;sza osi pionowej.</dd>
 <dd>7.7. Wybierz narz&#281;dzie <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical/pl">Utw&oacute;rz wi&#261;zanie pionowe</a></span> <i>(opcjonalnie)</i>. Je&#347;li narysujesz lini&#281; konstrukcyjn&#261; w d&oacute;&#322; nad osi&#261; Y, automatycznie <span typeof="mw:File"><a href="../index.php?title=Constraint_PointOnObject.svg&amp;filetimestamp=20231231195734&amp;.html" class="mw-file-description"><img src="../File/Constraint_PointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject/pl">Punkt dotycz&#261;cy wi&#261;zania z obiektem</a> zostanie ju&#380; umieszczony, utrzymuj&#261;c lini&#281; konstrukcyjn&#261; w pionie. W takim przypadku nie jest wymagane tworzenie dodatkowego <span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical/pl">wi&#261;zania pionowego</a>.</dd></dl>
 <p><i>Uwaga:</i> w trakcie dodawania wi&#261;za&#324;,  w obszarze okna <a href="../pl/3D_view.html" class="mw-redirect" title="3D view/pl">widoku 3D</a>, nad rysunkiem geometrii pojawiaj&#261; si&#281; symbole graficzne wskazuj&#261;ce typ zastosowanego wi&#261;zania. Je&#347;li te symbole przys&#322;aniaj&#261; ci widok, mo&#380;esz je ukry&#263;, usuwaj&#261;c zaznaczenie wi&#261;za&#324; w polu <a href="../pl/Task_panel.html" class="mw-redirect" title="Task panel/pl">panelu zada&#324;</a>. Nale&#380;y r&oacute;wnie&#380; zauwa&#380;y&#263;, &#380;e liczba stopni swobody maleje po dodaniu ka&#380;dego z wi&#261;za&#324;.
-</p>
-<div class="mw-translate-fuzzy">
-<p><i>Uwaga 2:</i> je&#347;li chcesz tymczasowo wy&#322;&#261;czy&#263; wi&#261;zanie, mo&#380;esz zaznaczy&#263; je i nacisn&#261;&#263; przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/pl">Prze&#322;&#261;cz aktywno&#347;&#263; wi&#261;zania</a></span>. Gdy zechcesz zastosowa&#263; je ponownie, wci&#347;nij powt&oacute;rnie ten sam przycisk.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
+</p><p><i>Uwaga 2:</i> je&#347;li chcesz tymczasowo wy&#322;&#261;czy&#263; wi&#261;zanie, mo&#380;esz zaznaczy&#263; je i nacisn&#261;&#263; przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../pl/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/pl">Prze&#322;&#261;cz aktywno&#347;&#263; wi&#261;zania</a></span>. Gdy zechcesz w&#322;&#261;czy&#263; je ponownie, wci&#347;nij powt&oacute;rnie ten sam przycisk.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05c_Sk01_Sketcher_equality_constraints_I-arcs.png&amp;filetimestamp=20200223072159&amp;.html" class="mw-file-description"><img src="../File/05c_Sk01_Sketcher_equality_constraints_I-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Szkic z wi&#261;zaniami r&oacute;wno&#347;ci stosowanymi do linii konstrukcyjnych oraz do dw&oacute;ch zestaw&oacute;w &#322;uk&oacute;w.</p>
@@ -303,35 +299,35 @@ Tutaj mog&#261; zosta&#263; zmienione r&oacute;wnie&#380; inne opcje, w tym g&#2
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210923
+Cached time: 20260112074834
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.187 seconds
-Real time usage: 0.743 seconds
-Preprocessor visited node count: 810/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.224 seconds
+Preprocessor visited node count: 809/1000000
 Post&#8208;expand include size: 44321/2097152 bytes
 Template argument size: 12511/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2543/5000000 bytes
+Unstrip post&#8208;expand size: 2552/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.368      1 -total
- 26.83%   33.638      1 Template:Sketcher_Tools_navi/pl
- 25.48%   31.948      1 Template:TutorialInfo/pl
- 20.17%   25.289      2 Template:Navigation_menu_2
- 11.66%   14.612      9 Template:Value
-  9.48%   11.888     15 Template:Emphasis
-  8.28%   10.385      9 Template:Incode
-  7.17%    8.992      1 Template:Userdocnavi/pl
-  5.66%    7.096      5 Template:KEY
-  4.39%    5.501     28 Template:Button
+100.00%   39.255      1 -total
+ 18.74%    7.355      1 Template:Sketcher_Tools_navi/pl
+ 16.82%    6.602      1 Template:TutorialInfo/pl
+ 12.67%    4.975      9 Template:Value
+  9.46%    3.714     11 Template:Caption
+  8.19%    3.213      2 Template:Navigation_menu_2
+  7.77%    3.050      5 Template:KEY
+  7.73%    3.036      9 Template:Incode
+  6.46%    2.536     15 Template:Emphasis
+  6.42%    2.519     28 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:182312-0!canonical and timestamp 20260111210922 and revision id 1736362. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:182312-0!canonical and timestamp 20260112074834 and revision id 1737268. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
