--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -441,10 +441,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span id="Dost.C4.99pne_parametry"></span><span class="mw-headline" id="Dost&#281;pne_parametry">Dost&#281;pne parametry</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Niekt&oacute;re parametry s&#261; dost&#281;pne w ustawieniach FreeCAD, zobacz: <b>Menu &rarr; Narz&#281;dzia &rarr; Edytuj parametry...</b>
+<p>Niekt&oacute;re parametry s&#261; dost&#281;pne w ustawieniach FreeCAD, zobacz: <b>Menu &rarr; Narz&#281;dzia &rarr; Edytuj parametry</b>
 </p>
-</div>
 <ul><li>Parametr u&#380;ytkownika: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
 <ul><li><code>false</code> tryb normalnego tekstu (i czarny), wy&#322;&#261;cza switchFontComBox</li>
@@ -482,9 +480,7 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </p><p>- na forum <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=7384&amp;p=87642#p87642">Extrude from curved surface of cylinder</a>
 </p><p><span id="Examples"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id="Przyk.C5.82ad"></span><span class="mw-headline" id="Przyk&#322;ad">Przyk&#322;ad</span></h2>
-</div>
+<h2><span id="Przyk.C5.82ady"></span><span class="mw-headline" id="Przyk&#322;ady">Przyk&#322;ady</span></h2>
 <center>  
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
@@ -960,15 +956,15 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213524
+Cached time: 20260112075822
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.391 seconds
-Real time usage: 0.746 seconds
-Preprocessor visited node count: 1521/1000000
-Post&#8208;expand include size: 41966/2097152 bytes
-Template argument size: 13300/2097152 bytes
+CPU time usage: 0.315 seconds
+Real time usage: 0.369 seconds
+Preprocessor visited node count: 1519/1000000
+Post&#8208;expand include size: 41963/2097152 bytes
+Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
@@ -976,19 +972,19 @@ Unstrip post&#8208;expand size: 66939/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  569.229      1 -total
- 31.52%  179.401     10 Template:Code
-  1.29%    7.369      1 Template:Draft_Tools_navi/pl
-  1.14%    6.470     10 Template:CheckBox
-  0.86%    4.885      1 Template:Macro/pl
-  0.86%    4.872     19 Template:Clear
-  0.75%    4.265      7 Template:RadioButton
-  0.72%    4.113      1 Template:Codeextralink
-  0.62%    3.532      1 Template:Userdocnavi/pl
-  0.61%    3.499      3 Template:ColoredText
+100.00%  213.123      1 -total
+  1.82%    3.875     10 Template:CheckBox
+  1.75%    3.735      7 Template:RadioButton
+  1.57%    3.348     10 Template:Code
+  1.34%    2.864      1 Template:Caption
+  1.29%    2.757      1 Template:Draft_Tools_navi/pl
+  1.27%    2.716      1 Template:Macro/pl
+  1.22%    2.600      1 Template:Codeextralink
+  1.07%    2.286      3 Template:ColoredText
+  1.01%    2.159     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260111213524 and revision id 1736509. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260112075822 and revision id 1737272. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
