Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -567,9 +567,7 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </ul>  
 </center>  
 <p><br>
-</p>
-<div class="mw-translate-fuzzy">
-<p><br>  
+</p><p><br>  
 </p>
 <center>  
 <ul class="gallery mw-gallery-traditional">
@@ -578,8 +576,8 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 			<div class="gallerytext">Pier&#347;cie&#324; &mdash; krzywa wewn&#281;trzna z operacj&#261; odejmowania.  </div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Obr&oacute;t znaku 0&deg;, 90&deg;, ..."><img alt="Obr&oacute;t znaku 0&deg;, 90&deg;, ..." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Obr&oacute;t znaku 0&deg;, 90&deg;, ...  </div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Obr&oacute;t znaku 0&deg;, 90&deg; itd."><img alt="Obr&oacute;t znaku 0&deg;, 90&deg; itd." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Obr&oacute;t znaku 0&deg;, 90&deg; itd.  </div>
 		</li>
 </ul>  
 </center>  
@@ -594,9 +592,7 @@ Je&#347;li polecenie nie jest u&#380;ywane w wybranej opcji, zostanie wyszarzone
 </ul>  
 </center>  
 <p><br>
-</p>
-</div>
-<p><span id="Example_onto_Ellipse"></span>
+</p><p><span id="Example_onto_Ellipse"></span>
 </p>
 <h2><span id="Przyk.C5.82ad_na_elipsie"></span><span class="mw-headline" id="Przyk&#322;ad_na_elipsie">Przyk&#322;ad na elipsie</span></h2>
 <center>
@@ -956,35 +952,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112075822
+Cached time: 20260112075836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.315 seconds
-Real time usage: 0.369 seconds
-Preprocessor visited node count: 1519/1000000
+CPU time usage: 0.376 seconds
+Real time usage: 0.427 seconds
+Preprocessor visited node count: 1518/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66939/5000000 bytes
+Unstrip post&#8208;expand size: 66943/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  213.123      1 -total
-  1.82%    3.875     10 Template:CheckBox
-  1.75%    3.735      7 Template:RadioButton
-  1.57%    3.348     10 Template:Code
-  1.34%    2.864      1 Template:Caption
-  1.29%    2.757      1 Template:Draft_Tools_navi/pl
-  1.27%    2.716      1 Template:Macro/pl
-  1.22%    2.600      1 Template:Codeextralink
-  1.07%    2.286      3 Template:ColoredText
-  1.01%    2.159     22 Template:Button
+100.00%  248.440      1 -total
+  1.72%    4.277     10 Template:Code
+  1.38%    3.438      7 Template:RadioButton
+  1.34%    3.319      1 Template:Draft_Tools_navi/pl
+  1.31%    3.253      1 Template:Macro/pl
+  1.04%    2.577      3 Template:ColoredText
+  0.93%    2.310     10 Template:CheckBox
+  0.86%    2.127      6 Template:SpinBox
+  0.85%    2.109     19 Template:Clear
+  0.72%    1.781     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260112075822 and revision id 1737272. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260112075835 and revision id 1737274. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
