Updated page FreeCAD and DWG Import/pl

--- a/wiki/pl/FreeCAD_and_DWG_Import.html
+++ b/wiki/pl/FreeCAD_and_DWG_Import.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FreeCAD and DWG Import/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FreeCAD+and+DWG+Import&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD und DWG-Import (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD und DWG-Import (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_and_DWG_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD and DWG Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="Importaci&oacute;n de FreeCAD y DWG (42% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD et l'importation DWG (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="Importare i file DWG in FreeCAD (98% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD e Importa&ccedil;&atilde;o DWG (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD &#1080; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090; DWG (2% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="FreeCAD &#50640;&#49436; DWG &#48520;&#47084;&#50724;&#44592; (29% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -74,11 +74,8 @@ Aby zobaczy&#263; te opcje, przejd&#378; na stron&#281; <a rel="nofollow" class=
 <ul><li>strona g&#322;&oacute;wna: <a rel="nofollow" class="external free" href="https://qcad.org/en/qcad-command-line-tools#dwg2dwg">https://qcad.org/en/qcad-command-line-tools#dwg2dwg</a></li>
 <li>licencja: komercyjna.</li>
 <li>opcjonalny, u&#380;ywany do w&#322;&#261;czania importu i eksportu plik&oacute;w DWG.</li></ul>
-<div class="mw-translate-fuzzy">
-<p>QCAD to dobrze znana platforma CAD 2D oparta na formacie DXF. Oferuje r&oacute;wnie&#380; p&#322;atn&#261; wersj&#281; pro, kt&oacute;ra jest w zasadzie wersj&#261; open-source plus wsparcie dla formatu DWG. Kupuj&#261;c wersj&#281; pro, QCAD zawiera r&oacute;wnie&#380; narz&#281;dzie do konwersji DWG na DXF, kt&oacute;re mo&#380;e by&#263; u&#380;ywane przez FreeCAD.
-</p>
-</div>
-<p><span id="Installation"></span>
+<p>QCAD Community Edition to dobrze znana platforma CAD 2D oparta na formacie DXF. Oferuje r&oacute;wnie&#380; p&#322;atn&#261; wersj&#281; pro, kt&oacute;ra jest w zasadzie wersj&#261; open-source plus wsparcie dla formatu DWG i funkcji kre&#347;lenia. Kupuj&#261;c wersj&#281; pro, QCAD zawiera r&oacute;wnie&#380; narz&#281;dzie do konwersji DWG na DXF, kt&oacute;re mo&#380;e by&#263; u&#380;ywane przez FreeCAD.
+</p><p><span id="Installation"></span>
 </p>
 <h4><span class="mw-headline" id="Instalacja_2">Instalacja</span></h4>
 <p>Je&#347;li narz&#281;dzie nie zostanie znalezione automatycznie przez FreeCAD po instalacji <i>(<span style="font-size:small;"><a href="../pl/Release_notes_0.21.html" title="Release notes 0.21/pl">dost&#281;pne w wersji 0.21</a></span>)</i>, nale&#380;y r&#281;cznie ustawi&#263; &#347;cie&#380;k&#281; do pliku bash <i>(Linux i macOS)</i> lub pliku wsadowego <i>(Windows)</i>. Wi&#281;cej informacji na ten temat mo&#380;na znale&#378;&#263; na stronie <a href="../pl/Import_Export_Preferences.html#DWG" title="Import Export Preferences/pl">Ustawienia Importu i Eksportu</a>.
@@ -146,34 +143,34 @@ Aby zobaczy&#263; te opcje, przejd&#378; na stron&#281; <a rel="nofollow" class=
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210823
+Cached time: 20260112075930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.179 seconds
-Preprocessor visited node count: 228/1000000
+CPU time usage: 0.066 seconds
+Real time usage: 0.098 seconds
+Preprocessor visited node count: 227/1000000
 Post&#8208;expand include size: 17632/2097152 bytes
 Template argument size: 7010/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3071/5000000 bytes
+Unstrip post&#8208;expand size: 3080/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.782      1 -total
- 40.33%   22.495      1 Template:Draft_Tools_navi/pl
- 22.80%   12.717      2 Template:Navigation_menu_2
- 19.07%   10.639      1 Template:Userdocnavi/pl
- 11.11%    6.196      5 Template:Version/pl
-  9.07%    5.057      3 Template:Incode
-  8.46%    4.722      1 Template:TOCright
-  5.52%    3.077      2 Template:Code
-  4.15%    2.316      1 Template:Fake_heading
+100.00%   17.297      1 -total
+ 19.06%    3.297      1 Template:Draft_Tools_navi/pl
+ 18.48%    3.196      1 Template:Userdocnavi/pl
+ 15.00%    2.594      5 Template:Version/pl
+ 13.83%    2.392      1 Template:Fake_heading
+ 12.39%    2.143      2 Template:Code
+  8.93%    1.545      2 Template:Navigation_menu_2
+  8.74%    1.512      3 Template:Incode
+  6.81%    1.177      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241133-0!canonical and timestamp 20260111210822 and revision id 1736346. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:241133-0!canonical and timestamp 20260112075930 and revision id 1737276. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
