--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Package Metadata (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -177,15 +177,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
 <h4><span class="mw-headline" id="Atrybuty_6">Atrybuty</span></h4>
 <p>Wszystkie zale&#380;no&#347;ci i relacje mog&#261; ogranicza&#263; ich zastosowanie do okre&#347;lonych wersji. Dla ka&#380;dego operatora por&oacute;wnania mo&#380;na u&#380;y&#263; atrybutu. Dwa z tych atrybut&oacute;w mog&#261; by&#263; u&#380;yte razem do opisania zakresu wersji.
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>version_lt="VERSION" <i>(opcjonalnie)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji mniejszych ni&#380; podany numer wersji.</li>
 <li>version_lte="VERSION" <i>(opcjonalne)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji mniejszych lub r&oacute;wnych podanemu numerowi wersji.</li>
 <li>version_eq="VERSION" <i>(opcjonalne)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji r&oacute;wnej podanemu numerowi wersji.</li>
 <li>version_gte="VERSION" <i>(opcjonalne)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji wi&#281;kszych lub r&oacute;wnych podanemu numerowi wersji.</li>
 <li>version_gt="VERSION" <i>(opcjonalne)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji wi&#281;kszych ni&#380; podany numer wersji.</li>
 <li>optional="true|false": Je&#347;li "optional" ma warto&#347;&#263; "true", w&oacute;wczas zale&#380;no&#347;&#263; jest traktowana jako opcjonalna, gdy dodatek jest instalowany za pomoc&#261; Mened&#380;era dodatk&oacute;w. Og&oacute;lnie oznacza to, &#380;e niepowodzenie instalacji zale&#380;no&#347;ci nie uniemo&#380;liwia instalacji dodatku, a u&#380;ytkownik mo&#380;e zosta&#263; zapytany, czy chce go zainstalowa&#263;. Wersje FreeCAD wcze&#347;niejsze ni&#380; 0.21 nie rozpoznaj&#261; tego atrybutu i b&#281;d&#261; go ignorowa&#263;.</li>
-<li>type="automatic|addon|internal|python": Opcjonalny, domy&#347;lnie "automatyczny". Wskazuje, do czego odnosi si&#281; ta instrukcja zale&#380;no&#347;ci. "addon" dotyczy dodatk&oacute;w zewn&#281;trznych, "internal" dotyczy wewn&#281;trznych &#347;rodowisk pracy <i>(np. "arch", "sketcher" itp.)</i>, a "python" wskazuje na zale&#380;no&#347;&#263; od pakietu Python. Wersje FreeCAD wcze&#347;niejsze ni&#380; 0.21 nie u&#380;ywaj&#261; tego atrybutu, a "automatic" jest zawsze zak&#322;adany.</li></ul>
-</div>
+<li>type="automatic|addon|internal|python": Opcjonalny, domy&#347;lnie "automatyczny". Wskazuje, do czego odnosi si&#281; ta instrukcja zale&#380;no&#347;ci. "addon" dotyczy dodatk&oacute;w zewn&#281;trznych, "internal" dotyczy wewn&#281;trznych &#347;rodowisk pracy, a "python" wskazuje na zale&#380;no&#347;&#263; od pakietu Python. Wersje FreeCAD wcze&#347;niejsze ni&#380; 0.21 nie u&#380;ywaj&#261; tego atrybutu, a "automatic" jest zawsze zak&#322;adany.</li></ul>
 <h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
 <p>The following internal workbench types are available:
 </p>
@@ -377,34 +375,34 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213159
+Cached time: 20260112080027
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.112 seconds
-Preprocessor visited node count: 480/1000000
+CPU time usage: 0.062 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 479/1000000
 Post&#8208;expand include size: 7972/2097152 bytes
 Template argument size: 2921/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8142/5000000 bytes
+Unstrip post&#8208;expand size: 8147/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.814      1 -total
- 22.13%    6.820      2 Template:VersionNote
- 14.38%    4.431      3 Template:Version/pl
- 13.43%    4.138      1 Template:Powerdocnavi/pl
- 13.36%    4.116     37 Template:Incode
- 11.08%    3.415      1 Template:TOCright
-  7.91%    2.438      1 Template:MenuCommand
-  6.08%    1.872      1 Template:Code
-  4.82%    1.484      1 Template:Navigation_menu_2
+100.00%   22.178      1 -total
+ 21.36%    4.737      1 Template:Powerdocnavi/pl
+ 12.77%    2.833     37 Template:Incode
+ 12.34%    2.736      1 Template:Code
+ 10.82%    2.400      3 Template:Version/pl
+ 10.28%    2.281      1 Template:TOCright
+ 10.19%    2.259      2 Template:VersionNote
+  9.54%    2.116      1 Template:MenuCommand
+  7.39%    1.638      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260111213158 and revision id 1736493. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260112080026 and revision id 1737278. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
