Created page with "===== Typ: internal ====="

--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -184,7 +184,9 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
 <li>version_gt="VERSION" <i>(opcjonalne)</i>: Zale&#380;no&#347;&#263; od pakietu jest ograniczona do wersji wi&#281;kszych ni&#380; podany numer wersji.</li>
 <li>optional="true|false": Je&#347;li "optional" ma warto&#347;&#263; "true", w&oacute;wczas zale&#380;no&#347;&#263; jest traktowana jako opcjonalna, gdy dodatek jest instalowany za pomoc&#261; Mened&#380;era dodatk&oacute;w. Og&oacute;lnie oznacza to, &#380;e niepowodzenie instalacji zale&#380;no&#347;ci nie uniemo&#380;liwia instalacji dodatku, a u&#380;ytkownik mo&#380;e zosta&#263; zapytany, czy chce go zainstalowa&#263;. Wersje FreeCAD wcze&#347;niejsze ni&#380; 0.21 nie rozpoznaj&#261; tego atrybutu i b&#281;d&#261; go ignorowa&#263;.</li>
 <li>type="automatic|addon|internal|python": Opcjonalny, domy&#347;lnie "automatyczny". Wskazuje, do czego odnosi si&#281; ta instrukcja zale&#380;no&#347;ci. "addon" dotyczy dodatk&oacute;w zewn&#281;trznych, "internal" dotyczy wewn&#281;trznych &#347;rodowisk pracy, a "python" wskazuje na zale&#380;no&#347;&#263; od pakietu Python. Wersje FreeCAD wcze&#347;niejsze ni&#380; 0.21 nie u&#380;ywaj&#261; tego atrybutu, a "automatic" jest zawsze zak&#322;adany.</li></ul>
-<h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
+<p><span id="Type:_internal"></span>
+</p>
+<h5><span class="mw-headline" id="Typ:_internal">Typ: internal</span></h5>
 <p>The following internal workbench types are available:
 </p>
 <ul><li><code>assembly</code></li>
@@ -375,13 +377,13 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080027
+Cached time: 20260112080043
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.090 seconds
-Preprocessor visited node count: 479/1000000
+CPU time usage: 0.057 seconds
+Real time usage: 0.087 seconds
+Preprocessor visited node count: 480/1000000
 Post&#8208;expand include size: 7972/2097152 bytes
 Template argument size: 2921/2097152 bytes
 Highest expansion depth: 4/100
@@ -391,18 +393,18 @@ Unstrip post&#8208;expand size: 8147/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.178      1 -total
- 21.36%    4.737      1 Template:Powerdocnavi/pl
- 12.77%    2.833     37 Template:Incode
- 12.34%    2.736      1 Template:Code
- 10.82%    2.400      3 Template:Version/pl
- 10.28%    2.281      1 Template:TOCright
- 10.19%    2.259      2 Template:VersionNote
-  9.54%    2.116      1 Template:MenuCommand
-  7.39%    1.638      1 Template:Navigation_menu_2
+100.00%   21.499      1 -total
+ 26.89%    5.782      2 Template:VersionNote
+ 16.82%    3.617      1 Template:Powerdocnavi/pl
+ 12.10%    2.601     37 Template:Incode
+ 10.66%    2.293      3 Template:Version/pl
+  9.74%    2.094      1 Template:TOCright
+  7.48%    1.607      1 Template:Code
+  6.00%    1.289      1 Template:Navigation_menu_2
+  4.84%    1.041      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260112080026 and revision id 1737278. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260112080043 and revision id 1737280. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
