--- a/wiki/pl/Package_Metadata.html
+++ b/wiki/pl/Package_Metadata.html
@@ -3,7 +3,7 @@
 <li><a href="../Package_Metadata.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
@@ -187,7 +187,7 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
 <p><span id="Type:_internal"></span>
 </p>
 <h5><span class="mw-headline" id="Typ:_internal">Typ: internal</span></h5>
-<p>The following internal workbench types are available:
+<p>Dost&#281;pne s&#261; nast&#281;puj&#261;ce typy wewn&#281;trznych &#347;rodowisk pracy:
 </p>
 <ul><li><code>assembly</code></li>
 <li><code>bim</code></li>
@@ -377,34 +377,34 @@ Aby okre&#347;li&#263;, &#380;e nie ma zastosowania &#380;adna licencja <i>(np. 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080043
+Cached time: 20260112080136
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.057 seconds
-Real time usage: 0.087 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.076 seconds
 Preprocessor visited node count: 480/1000000
 Post&#8208;expand include size: 7972/2097152 bytes
 Template argument size: 2921/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8147/5000000 bytes
+Unstrip post&#8208;expand size: 8151/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.499      1 -total
- 26.89%    5.782      2 Template:VersionNote
- 16.82%    3.617      1 Template:Powerdocnavi/pl
- 12.10%    2.601     37 Template:Incode
- 10.66%    2.293      3 Template:Version/pl
-  9.74%    2.094      1 Template:TOCright
-  7.48%    1.607      1 Template:Code
-  6.00%    1.289      1 Template:Navigation_menu_2
-  4.84%    1.041      1 Template:MenuCommand
+100.00%   16.349      1 -total
+ 20.79%    3.399      1 Template:Powerdocnavi/pl
+ 15.50%    2.534      3 Template:Version/pl
+ 13.34%    2.181      2 Template:VersionNote
+ 12.01%    1.963     37 Template:Incode
+  9.80%    1.603      1 Template:Code
+  7.79%    1.273      1 Template:Navigation_menu_2
+  7.33%    1.199      1 Template:TOCright
+  5.95%    0.972      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260112080043 and revision id 1737280. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279470-0!canonical and timestamp 20260112080136 and revision id 1737282. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
