Updated page FeaturePython Custom Properties/pl

--- a/wiki/pl/FeaturePython_Custom_Properties.html
+++ b/wiki/pl/FeaturePython_Custom_Properties.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FeaturePython Custom Properties/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FeaturePython+Custom+Properties&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--med" title="FeaturePython Benutzerdefinierte Eigenschaften (56% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--med" title="FeaturePython Benutzerdefinierte Eigenschaften (60% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FeaturePython_Custom_Properties.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FeaturePython Custom Properties (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--high" title="Propri&eacute;t&eacute;s personnalis&eacute;es des fonctions de Python (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="Propriet&agrave; personalizzate FeaturePython (1% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -22,10 +22,8 @@
 <p><span id="Creating_a_FeaturePython_object_and_adding_a_property_to_it"></span>
 </p>
 <h2><span id="Tworzenie_obiektu_FeaturePython_i_dodawanie_do_niego_w.C5.82a.C5.9Bciwo.C5.9Bci"></span><span class="mw-headline" id="Tworzenie_obiektu_FeaturePython_i_dodawanie_do_niego_w&#322;a&#347;ciwo&#347;ci"><span id="Creating"> Tworzenie obiektu FeaturePython i dodawanie do niego w&#322;a&#347;ciwo&#347;ci</span></span></h2>
-<div class="mw-translate-fuzzy">
-<p>Ten kod utworzy obiekt o wewn&#281;trznej nazwie <code>InternalObjectName</code> <i>(automatycznie zmienianej na <code>InternalObjectName001</code> i tak dalej, je&#347;li istnieje ju&#380; obiekt o nazwie <code>InternalObjectName</code>)</i> i nadaj mu przyjazn&#261; dla u&#380;ytkownika etykiet&#281; <code>User-friendly label</code>. Ta etykieta b&#281;dzie wy&#347;wietlana w <a href="../pl/Tree_view.html" class="mw-redirect" title="Tree view/pl">widoku drzewa</a>. <a href="../pl/Expressions.html" title="Expressions/pl">Wyra&#380;enia</a> mog&#261; odnosi&#263; si&#281; do tego obiektu za pomoc&#261; jego etykiety, u&#380;ywaj&#261;c <code>&lt;&lt;User-friendly label&gt;&gt;</code>.
+<p>Ten kod utworzy obiekt o wewn&#281;trznej nazwie <code>InternalObjectName</code> <i>(automatycznie zmienianej na <code>InternalObjectName001</code> i tak dalej, je&#347;li istnieje ju&#380; obiekt o nazwie <code>InternalObjectName</code>)</i> i nadaj mu przyjazn&#261; dla u&#380;ytkownika etykiet&#281; <code>User-friendly label</code>. Ta etykieta b&#281;dzie wy&#347;wietlana w <a href="../pl/Tree_View.html" title="Tree View/pl">Widoku drzewa</a>. <a href="../pl/Expressions.html" title="Expressions/pl">Wyra&#380;enia</a> mog&#261; odnosi&#263; si&#281; do tego obiektu za pomoc&#261; jego etykiety, u&#380;ywaj&#261;c <code>&lt;&lt;User-friendly label&gt;&gt;</code>.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 </pre></div>
@@ -1078,13 +1076,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205902
+Cached time: 20260112080157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.339 seconds
-Real time usage: 0.432 seconds
-Preprocessor visited node count: 2497/1000000
+CPU time usage: 0.246 seconds
+Real time usage: 0.283 seconds
+Preprocessor visited node count: 2496/1000000
 Post&#8208;expand include size: 21087/2097152 bytes
 Template argument size: 35629/2097152 bytes
 Highest expansion depth: 5/100
@@ -1094,17 +1092,17 @@ Unstrip post&#8208;expand size: 154093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.003      1 -total
- 48.47%   52.350     95 Template:Code
- 12.06%   13.022     43 Template:Version/pl
-  9.19%    9.930      1 Template:Userdocnavi/pl
-  8.36%    9.034      1 Template:TOCright
-  5.16%    5.569      1 Template:Navigation_menu_2
-  4.66%    5.037     35 Template:Incode
-  2.20%    2.378    133 Template:TODO
+100.00%   57.207      1 -total
+ 53.70%   30.717     95 Template:Code
+  8.35%    4.778     43 Template:Version/pl
+  7.42%    4.245      1 Template:Userdocnavi/pl
+  5.87%    3.356     35 Template:Incode
+  3.62%    2.071      1 Template:TOCright
+  2.96%    1.691    133 Template:TODO
+  1.74%    0.993      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260111205901 and revision id 1736232. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080157 and revision id 1737284. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
