--- a/wiki/pl/FeaturePython_Custom_Properties.html
+++ b/wiki/pl/FeaturePython_Custom_Properties.html
@@ -27,10 +27,8 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>Aby doda&#263; w&#322;a&#347;ciwo&#347;&#263; do tego obiektu, u&#380;yj d&#322;ugiej formy <code>addProperty</code> jak pokazano poni&#380;ej. FreeCAD automatycznie rozbije <code>ThePropertyName</code> i wy&#347;wietli go z odst&#281;pami (<code>The Property Name</code>) na karcie <a href="../pl/Property_editor.html#W%C5%82a%C5%9Bciwo%C5%9Bci_widoku_i_danych" class="mw-redirect" title="Property editor/pl">Dane edytora w&#322;a&#347;ciwo&#347;ci</a>.
+<p>Aby doda&#263; w&#322;a&#347;ciwo&#347;&#263; do tego obiektu, u&#380;yj d&#322;ugiej formy <code>addProperty</code> jak pokazano poni&#380;ej. FreeCAD automatycznie rozbije <code>ThePropertyName</code> i wy&#347;wietli go z odst&#281;pami (<code>The Property Name</code>) na karcie <a href="../pl/Property_View.html#W%C5%82a%C5%9Bciwo%C5%9Bci_widoku_i_danych" title="Property View/pl">Dane Widoku w&#322;a&#347;ciwo&#347;ci</a>.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyBool"</span><span class="p">,</span> <span class="s2">"ThePropertyName"</span><span class="p">,</span> <span class="s2">"Subsection"</span><span class="p">,</span> <span class="s2">"Description for tooltip"</span><span class="p">)</span>
 </pre></div>
 <p><code>App::PropertyBool</code> jest typem w&#322;a&#347;ciwo&#347;ci. R&oacute;&#380;ne typy zosta&#322;y opisane bardziej szczeg&oacute;&#322;owo poni&#380;ej.
@@ -1076,13 +1074,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080157
+Cached time: 20260112080222
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.246 seconds
-Real time usage: 0.283 seconds
-Preprocessor visited node count: 2496/1000000
+CPU time usage: 0.298 seconds
+Real time usage: 0.329 seconds
+Preprocessor visited node count: 2495/1000000
 Post&#8208;expand include size: 21087/2097152 bytes
 Template argument size: 35629/2097152 bytes
 Highest expansion depth: 5/100
@@ -1092,17 +1090,17 @@ Unstrip post&#8208;expand size: 154093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.207      1 -total
- 53.70%   30.717     95 Template:Code
-  8.35%    4.778     43 Template:Version/pl
-  7.42%    4.245      1 Template:Userdocnavi/pl
-  5.87%    3.356     35 Template:Incode
-  3.62%    2.071      1 Template:TOCright
-  2.96%    1.691    133 Template:TODO
-  1.74%    0.993      1 Template:Navigation_menu_2
+100.00%   51.040      1 -total
+ 57.38%   29.285     95 Template:Code
+  7.06%    3.605      1 Template:Userdocnavi/pl
+  6.77%    3.453     43 Template:Version/pl
+  5.11%    2.607     35 Template:Incode
+  3.05%    1.558    133 Template:TODO
+  2.61%    1.330      1 Template:Navigation_menu_2
+  2.52%    1.287      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080157 and revision id 1737284. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080222 and revision id 1737286. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
