Updated page FeaturePython Custom Properties/pl

--- a/wiki/pl/FeaturePython_Custom_Properties.html
+++ b/wiki/pl/FeaturePython_Custom_Properties.html
@@ -141,11 +141,8 @@
 <p><span style="font-size:small;"><a href="../pl/Release_notes_0.21.html" title="Release notes 0.21/pl">dost&#281;pne w wersji 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyDistance">App::PropertyDistance</span></h2>
-<div class="mw-translate-fuzzy">
-<p>W&#322;a&#347;ciwo&#347;&#263; odleg&#322;o&#347;ci. Mo&#380;e zawiera&#263; warto&#347;&#263; dodatni&#261;, ujemn&#261; lub zerow&#261; odleg&#322;o&#347;ci. Aby uzyska&#263; warto&#347;&#263; jako liczb&#281; zmiennoprzecinkow&#261;, u&#380;yj elementu "Value" w&#322;a&#347;ciwo&#347;ci. Warto&#347;&#263; zawsze jest wyra&#380;ona w milimetrach, ale w <a href="../pl/Property_editor.html" class="mw-redirect" title="Property editor/pl">edytorze w&#322;a&#347;ciwo&#347;ci</a> jest prezentowana w jednostkach zgodnie z preferencjami. Dla wi&#281;cej szczeg&oacute;&#322;&oacute;w, zobacz sekcj&#281; dotycz&#261;c&#261; <a href="#Creating">Tworzenie obiektu FeaturePython i dodawanie do niego w&#322;a&#347;ciwo&#347;ci</a>.
-</p>
-</div>
-<p><a href="#App::PropertyLength">App::PropertyLength</a> to podobna w&#322;a&#347;ciwo&#347;&#263;, kt&oacute;ra nie mo&#380;e zawiera&#263; warto&#347;ci ujemnej.
+<p>W&#322;a&#347;ciwo&#347;&#263; odleg&#322;o&#347;ci. Mo&#380;e zawiera&#263; warto&#347;&#263; dodatni&#261;, ujemn&#261; lub zerow&#261; odleg&#322;o&#347;ci. Aby uzyska&#263; warto&#347;&#263; jako liczb&#281; zmiennoprzecinkow&#261;, u&#380;yj elementu "Value" w&#322;a&#347;ciwo&#347;ci. Warto&#347;&#263; zawsze jest wyra&#380;ona w milimetrach, ale w <a href="../pl/Property_View.html" title="Property View/pl">Widoku w&#322;a&#347;ciwo&#347;ci</a> jest prezentowana w jednostkach zgodnie z preferencjami. Dla wi&#281;cej szczeg&oacute;&#322;&oacute;w, zobacz sekcj&#281; dotycz&#261;c&#261; <a href="#Tworzenie">Tworzenie obiektu FeaturePython i dodawanie do niego w&#322;a&#347;ciwo&#347;ci</a>.
+</p><p><a href="#App::PropertyLength">App::PropertyLength</a> to podobna w&#322;a&#347;ciwo&#347;&#263;, kt&oacute;ra nie mo&#380;e zawiera&#263; warto&#347;ci ujemnej.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
@@ -1074,13 +1071,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112080222
+Cached time: 20260112080238
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.329 seconds
-Preprocessor visited node count: 2495/1000000
+CPU time usage: 0.256 seconds
+Real time usage: 0.273 seconds
+Preprocessor visited node count: 2494/1000000
 Post&#8208;expand include size: 21087/2097152 bytes
 Template argument size: 35629/2097152 bytes
 Highest expansion depth: 5/100
@@ -1090,17 +1087,17 @@ Unstrip post&#8208;expand size: 154093/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.040      1 -total
- 57.38%   29.285     95 Template:Code
-  7.06%    3.605      1 Template:Userdocnavi/pl
-  6.77%    3.453     43 Template:Version/pl
-  5.11%    2.607     35 Template:Incode
-  3.05%    1.558    133 Template:TODO
-  2.61%    1.330      1 Template:Navigation_menu_2
-  2.52%    1.287      1 Template:TOCright
+100.00%   51.688      1 -total
+ 55.34%   28.607     95 Template:Code
+  7.25%    3.746     43 Template:Version/pl
+  6.41%    3.314      1 Template:Userdocnavi/pl
+  4.99%    2.578     35 Template:Incode
+  2.70%    1.395      1 Template:TOCright
+  2.67%    1.378    133 Template:TODO
+  2.35%    1.217      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080222 and revision id 1737286. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253299-0!canonical and timestamp 20260112080238 and revision id 1737288. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
